2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Statistics
	Added a display of the framerate at the bottom, use F10 to trigger it.

2001-12-08  Jonas Christian Drewsen  <jcd@diller.emdrupborg.dk>

	* Collision:
	Fixed double collision reponse error.
	Moved all collision handling for ball to the TBall class
	Removed currenttime paramenter in OnCollision, and 
	the LastCollision variable is now set in game.cc
	and not in the OnCollision function.
	
2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Powerup
	Added _non_ working ballspeed powerup.

	* Highscore
	Made it such that the highscore is shown, if you enter a new one.

2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Rounding
	Fixed proper rounding when blitting pixmapentities.
	
	* Scripts
	Moved the preload stuff around a bit, added a ReloadScripts()
	command, preloads the powerup_bad.wav file

2001-12-06  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Highscore
	Added a patch to the highscore from Kim Schulz

	* Powerup
	Added a powerup level - does not work

2001-12-05  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Preload
	Added a general preload thingy to the ressourcemanager class.
	Preloaded all powerup graphics, it is in powerups.py.

	* Profiling
	Fiddled with profiling stuff. Seems 47 % of the time on map1.py is
	spent in collision detection.

2001-12-01  Mads Bondo Dydensborg  <madsdyd@ripley>

	* RELEASE!
	Version 0.3.0 will be the version submitted for the SDL
	contest. It includes a bunch of minor changes, and several new
	powerups and a new map. We did not have time to include all the
	stuff we wished. To bad.
	Tagging version 0.3.0

	* Various
	Removed some print stuff from various places
	Adjusted the buffer mix size
	Added a time bonus on level complete
	Tagging version 0.2.2

2001-11-30  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Sounds
	Added a number of sounds
	Tagging version 0.2.1

	* Fixes
	A lot of minor fixes
	Updated makefiles to only install files that are used