@@ -1,3 +1,8 @@
+2001-12-09  Jonas Christian Drewsen  <jcd@diller.emdrupborg.dk>
+
+	* Animation:
+	Added animation of TPixmapEntities.
+
 2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>
 
 	* Statistics
